[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Fonts/ink-free-normal.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/textures/ui/base_button.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/ui/background.png" type="Texture" id=3]
[ext_resource path="res://scripts/ui/OptionsScreen.gd" type="Script" id=4]
[ext_resource path="res://scenes/ui/Fade.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/ink-free-normal.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/textures/ui/slider_ball.png" type="Texture" id=7]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 1366, 685 )

[sub_resource type="DynamicFont" id=4]
size = 70
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
size = 50
use_filter = true
font_data = ExtResource( 1 )

[node name="OptionsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Background/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3

[node name="LabelTitle" type="Label" parent="Background/MarginContainer/VBoxContainer2"]
margin_right = 984.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 4 )
text = "Options"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer2"]
margin_top = 91.0
margin_right = 984.0
margin_bottom = 493.0
size_flags_vertical = 3
custom_constants/separation = 50
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer2/HBoxContainer"]
margin_right = 467.0
margin_bottom = 402.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="Background/MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 155.0
margin_right = 467.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 5 )
text = "Sound Volume"
align = 1

[node name="HSliderSound" type="HSlider" parent="Background/MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
margin_top = 197.0
margin_right = 467.0
margin_bottom = 247.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_icons/grabber_disabled = ExtResource( 7 )
custom_icons/grabber_highlight = ExtResource( 7 )
custom_icons/grabber = ExtResource( 7 )
max_value = 1.0
step = 0.1
value = 1.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer2/HBoxContainer"]
margin_left = 517.0
margin_right = 984.0
margin_bottom = 402.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="Background/MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 155.0
margin_right = 467.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 5 )
text = "Music Volume"
align = 1

[node name="HSliderMusic" type="HSlider" parent="Background/MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
margin_top = 197.0
margin_right = 467.0
margin_bottom = 247.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_icons/grabber_disabled = ExtResource( 7 )
custom_icons/grabber_highlight = ExtResource( 7 )
custom_icons/grabber = ExtResource( 7 )
max_value = 1.0
step = 0.1
value = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer2"]
margin_top = 497.0
margin_right = 984.0
margin_bottom = 560.0

[node name="CenterContainerBack" type="CenterContainer" parent="Background/MarginContainer/VBoxContainer2/VBoxContainer"]
margin_right = 984.0
margin_bottom = 63.0

[node name="TextureRect" type="TextureRect" parent="Background/MarginContainer/VBoxContainer2/VBoxContainer/CenterContainerBack"]
margin_left = 358.0
margin_top = 18.0
margin_right = 626.0
margin_bottom = 44.0
rect_min_size = Vector2( 268, 26 )
texture = ExtResource( 2 )
stretch_mode = 6

[node name="ButtonBack" type="Button" parent="Background/MarginContainer/VBoxContainer2/VBoxContainer/CenterContainerBack"]
margin_left = 392.0
margin_right = 592.0
margin_bottom = 63.0
rect_min_size = Vector2( 200, 0 )
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.180392, 0.180392, 0.180392, 1 )
custom_colors/font_color = Color( 0.32549, 0.32549, 0.32549, 1 )
custom_colors/font_color_hover = Color( 0.513726, 0.513726, 0.513726, 1 )
custom_colors/font_color_pressed = Color( 0.235294, 0.235294, 0.235294, 1 )
text = "Back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -25.0

[node name="Fade" parent="." instance=ExtResource( 5 )]
mouse_filter = 2
fade_time = 1.5

[connection signal="value_changed" from="Background/MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HSliderSound" to="." method="_on_HSliderSound_value_changed"]
[connection signal="value_changed" from="Background/MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/HSliderMusic" to="." method="_on_HSliderMusic_value_changed"]
[connection signal="mouse_entered" from="Background/MarginContainer/VBoxContainer2/VBoxContainer/CenterContainerBack/ButtonBack" to="." method="_on_ButtonBack_mouse_entered"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer2/VBoxContainer/CenterContainerBack/ButtonBack" to="." method="_on_ButtonBack_pressed"]
